--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "start:dev": "nodemon src/index.ts"
+    "start:dev": "nodemon src/index.ts",
+    "test:load": "forever start -c \"node start-server.js\" . && artillery run load-tests/load-test.yml && forever stopall",
+    "test:loads": "artillery run load-tests/load-test.yml"
   },
   "keywords": [],
   "author": "",
@@ -14,21 +16,28 @@
   "description": "",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongo-sanitize": "^1.0.3",
     "@types/mongoose": "^5.11.96",
     "@types/nodemailer": "^6.4.15",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "artillery": "^2.0.20",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.6.1",
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
