--- a/load-tests/load-test.yml
+++ b/load-tests/load-test.yml
@@ -2,15 +2,14 @@ config:
   target: 'http://localhost:3000'
   phases:
     - duration: 30
-      arrivalRate: 10
-      name: Startup phase
+      arrivalRate: 100  # 100 requests per second
   http:
     timeout: 5
     pool: 'keep-alive'
 
 scenarios:
   - flow:
-      - get:
+      - post:
           url: '/api/users/register'
           json:
             email: "test@example.com"
@@ -21,13 +20,22 @@ scenarios:
           json:
             email: "test@example.com"
             password: "password"
+          capture:
+            - json: "$.token"  # Capture the token from the login response
+              as: "authToken"   # Store it in a variable called authToken
       - post:
           url: '/api/donations'
           json:
             donorId: "donorIdHere"
             beneficiaryId: "beneficiaryIdHere"
             amount: 10
+          headers:
+            Authorization: "Bearer {{ authToken }}"  # Use the captured token
       - get:
           url: '/api/donations/count/donorIdHere'
+          headers:
+            Authorization: "Bearer {{ authToken }}"  # Use the captured token
       - get:
           url: '/api/donations/period/donorIdHere?startDate=2023-01-01&endDate=2023-12-31&page=1&limit=10'
+          headers:
+            Authorization: "Bearer {{ authToken }}"  # Use the captured token
